# nnrt

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
onnx/: CMakeLists.txt  onnx.h
test_program/: CMakeLists.txt  generate_graph.py  main.cpp
